# InvestAI-ChatBot

./: InvestAI general information  pyproject.toml
invest_chatbot/: stock-investment-aibot.ipynb
